Added portfolio content and navigation to index.html
Expanded index.html with a site header, navigation menu, About Me, Skills, Portfolio, and Contact sections. Added sample project entries, images, and a contact form to enhance the portfolio's structure and content.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,79 @@
     <head></head>
     <body>
         <header>
-            <h1></h1>
+            <h1>CodeSpace Cat's Portfolio🎨</h1>
+            <nav>
+                <ul>
+                    <li><a href="#About Me🙋#">About Me🙋</a></li>
+                    <li><a href="#Skills#">Skills🧑💻</a></li>
+                    <li><a href="#Portfolio#">Portfolio📸</a></li>
+                    <li><a href="/Contact/">Contact📬</a></li>
+                </ul>
+            </nav>
         </header>
+
+        <section id="About Me🙋">
+            <h2>About Me🙋</h2>
+            <img src="/images/cat-codespace.png" alt="cat-codespace">
+            <p>Hello! I'm <b>CodeSpace Cat</b>. I'm purr-ssionate about web development and design. I've been paawing at the web industry for just one catnap (that's less than a day in human terms), and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. Whoa that's a lot of puns.</p>
+        </section>
+
+        <section id="Skills">
+            <h2>My Skills</h2>
+            <ul>
+                <li>Web Development🕸️</li>
+                <li>UI/UX Design🎨</li>
+                <li>Backend Development🧱</li>
+                <li>Database Development💻</li>
+                <li>SEO Optimization🔎</li>
+                <li>Lying in the Sun🌞</li>
+            </ul>
+        </section>
+
+        <section id="Porfolio">
+            <h2>Catfolio</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Project Name</th>
+                        <th>Date</th>
+                        <th>Description</th>
+                        <th>Thumbnail</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Purrfect Landing Page</td>
+                        <td><datetime date="DD-MM-YYYY">January 2024</datetime></td>
+                        <td>A delight landing page for a luxury cat condo</td>
+                        <td><img src="/images/1.png"></td>
+                    </tr>
+                    <tr>
+                        <td>Kitty Commerce</td>
+                        <td><datetime date="DD-MM-YYYY">February 2024</datetime></td>
+                        <td>An online store selling the fanciest catnip toys</td>
+                        <td><img src="/images/2.png"></td>
+                    </tr>
+                    <tr>
+                        <td>CatChat Social</td>
+                        <td><datetime date="DD-MM-YYYY">June 2024</datetime></td>
+                        <td>A social meadia site for cats to meow and hiss</td>
+                        <td><img src="/images/3.png"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section id="Contact">
+            <h2>Contat Me</h2>
+            <p>
+                Name: <input type="text"> Email: <input type="text"> Message: <input type="text">
+                <button>Submit</button>
+            </p>
+        </section>
+        <footer>
+            <p>&copy; 2024 CodeSpace Cat. All rights reserved.</p>
+        </footer>
     </body>
 </html>
     
