Fixed section IDs in index.html
Removed extra '#' characters from section IDs to ensure proper navigation and anchor linking within the page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </nav>
         </header>
 
-        <section id="#About Me#">
+        <section id="About Me">
             <h2>About Me🙋</h2>
             <img src="/images/cat-codespace.png" alt="cat-codespace">
             <p>
@@ -22,7 +22,7 @@
             </p>
         </section>
 
-        <section id="#Skills#">
+        <section id="Skills">
             <h2>My Skills💻</h2>
             <ul>
                 <li>Web Development🕸️</li>
@@ -34,7 +34,7 @@
             </ul>
         </section>
 
-        <section id="#Portfolio#">
+        <section id="Portfolio">
             <h2>Catfolio</h2>
             <table>
                 <thead>
