Update nav links to use section anchors
Changed navigation menu links from placeholders to anchor links targeting specific sections within the page for improved navigation.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
             <h1>CodeSpace Cat's Portfolio🎨</h1>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">About Me🙋</a></li>
-                    <li><a href="#">Skills🧑💻</a></li>
-                    <li><a href="#">Portfolio📸</a></li>
-                    <li><a href="#">Contact📬</a></li>
+                    <li><a href="#About Me">About Me🙋</a></li>
+                    <li><a href="#Skills">Skills🧑💻</a></li>
+                    <li><a href="#Portfolio">Portfolio📸</a></li>
+                    <li><a href="#Contact">Contact📬</a></li>
                 </ul>
             </nav>
         </header>
